# TopologyChecker

./: CMakeLists.txt  README  UI.pri  anglecheck.cpp  anglecheck.h  areacheck.cpp  areacheck.h  attrvalidcheck.cpp  attrvalidcheck.h  check.cpp  check.h  check.json  checkcontext.cpp  checkcontext.h  checkdock.cpp  checkdock.h  checkdock.ui  checker.cpp  checker.h  checkerror.cpp  checkerror.h  checkerutils.cpp  checkerutils.h  checkitemdialog.cpp  checkitemdialog.h  checkitemdialog.ui  checkresolutionmethod.cpp  checkresolutionmethod.h  checkset.h  checktask.cpp  checktask.h  classifydialog.cpp  classifydialog.h  classifydialog.ui  clockwisecheck.cpp  clockwisecheck.h  collapsiblegroupbox.cpp  collapsiblegroupbox.h  collinearcheck.cpp  collinearcheck.h  (+99 more)
